--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 Hello! my website is almost ready to use!
+My name is Nicole Hirsch. I am from Caracas,Venezuela and I have 21 years old. Currently Im studying Visual Arts
+at The Art Institute in Miami,Florida. 
+I have been studying since 4 years, and Im almost done. 
+Because Visual Arts has a very large campus of opportunites, Im going to focus on taking pictures of fine jewelry and also
+the marketing of it. 
